2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/person.tmpl: Added missing </div>
	* templates/person-base.tmpl: Added missing <ul></ul>


2007-11-29  Gil Forcada  <gforcada@svn.gnome.org>

	* releases.xml.in: Added cheese to proposed category

2007-11-29  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in: Added cheese module.
	* releases.xml.in: Added cheese to gnome-extras release-set.

2007-11-28  Claude Paroz  <claude@2xlibre.net>

	* data/gnome-gtp.png: Improved foot logo.

2007-11-27  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Tracking HEAD again for brasero.

2007-11-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: GTK+ branched (2-12).

2007-11-25  Claude Paroz  <claude@2xlibre.net>

	* modules.py: Paths were defined in the wrong place, moved in
	checkout().
	* update-stats.py: Check return value of the checkout function before
	proceeding.

2007-11-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module eog-plugins.

2007-11-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module libgweather (splitted from
	gnome-applets).

2007-11-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-keyring branched for 2.20 (and some other
	minor updates for old releases).

2007-11-16  Marcel Telka  <marcel@telka.sk>

	* people.xml.in: Updated my personal information.
	* translation-teams.xml.in: Updated Slovak [sk] team details.

2007-11-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: use gtranslator stable branch only.

2007-11-14  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	sound-juicer branched for gnome-2-20

2007-11-14  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	libbonoboui branched for gnome-2-20

2007-11-10  Claude Paroz  <claude@2xlibre.net>
