@@ -121,7 +121,6 @@
     <module id="bookmark-applet"/>
     <module id="brasero"/>
     <module id="byzanz"/>
-    <module id="cheese"/>
     <module id="chronojump"/>
     <module id="conglomerate"/>
     <module id="contact-lookup-applet"/>
@@ -622,6 +621,7 @@
       <module id="sound-juicer"/>
       <module id="tomboy"/>
       <module id="totem"/>
+      <module id="totem-pl-parser"/>
       <module id="vino"/>
       <module id="vte"/>
       <module id="yelp"/>
