@@ -1,8 +1,14 @@
 2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>
 
+	* gnome-modules.xml.in: Added totem-pl-parser and Bastien as a maintainer
+	of it and for totem too
+	* release.xml.in: Added totem-pl-parser to GNOME 2.22 release set and
+	removed cheese from gnome-extras since it is in Proposed set
+
+2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>
+
 	* templates/person.tmpl: Added missing </div>
 	* templates/person-base.tmpl: Added missing <ul></ul>
-
 
 2007-11-29  Gil Forcada  <gforcada@svn.gnome.org>
 
